examples/invalid/test24.alice

The looking-glass proc (spider number x)
opened
closed

The looking-glass hatta ()
opened 
  x was a number.
  proc(x).
closed
